Fix related tasks list spacing

--- a/src/styles/components/taskRelations.scss
+++ b/src/styles/components/taskRelations.scss
@@ -1,3 +1,5 @@
+$remove-icon-width: 24px;
+
 .task-relations {
   padding-bottom: 1em;
 
@@ -20,14 +22,27 @@
     .tasks {
       margin: 0;
 
-      .task {
-        padding: .5em;
-        max-width: 100%;
+      a:not(.remove) {
+        width: calc(100% - #{$remove-icon-width});
 
-        .different-list {
-          color: lighten($dark, 50);
-          width: auto;
+        .task {
+          padding: .5em;
+          max-width: 100%;
+
+          .different-list {
+            color: lighten($dark, 50);
+            width: auto;
+          }
         }
+      }
+
+      .task .tasktext {
+        width: calc(100% - .25rem); // Magic .25rem extra space
+      }
+
+      .remove {
+        width: $remove-icon-width;
+        text-align: center;
       }
     }
   }
